--- a/app/src/main/res/layout/block.xml
+++ b/app/src/main/res/layout/block.xml
@@ -1,21 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
-
-    <TextView
-        android:id="@+id/contact_name"
-        android:text="пример"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-</LinearLayout>-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,112 +13,45 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:elevation="3dp"
-        >
+        style="@style/MyCardViewStyle">
 
 
-
-<!--        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
+        <RelativeLayout
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:orientation="vertical"
-            android:gravity="center">
+            android:id="@+id/number">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:id="@+id/back_photo"
+                android:layout_centerInParent="true"
+                android:src="@drawable/circle"/>
 
+            <TextView
+                android:id="@+id/news_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAlignment="center" />
+        </RelativeLayout>
 
-                <LinearLayout
-                    android:layout_weight="0.1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="10dp"
-                    >
-
-                    <TextView
-
-                        android:id="@+id/price"
-                        android:maxLines="2"
-                        android:textSize="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="INR 0000"
-                        android:textColor="#000000"
-                        />
-
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:textSize="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="Wrist Watches"
-                        android:layout_marginTop="7dp"
-                        android:textColor="#000000"
-
-                        />
-
-                    <TextView
-                        android:id="@+id/color"
-                        android:textSize="13dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="RED"
-                        android:layout_marginTop="7dp"
-                        android:textColor="#000000"
-                        />
-                </LinearLayout>
-
-
-            </LinearLayout>
-        </LinearLayout>-->
-
-        <LinearLayout
-            android:layout_weight="0.1"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            >
-
-            <TextView
-
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:maxLines="2"
-                android:text="INR 0000"
-                android:textColor="#000000"
-                android:textSize="20dp" />
+            android:text="LGMLKGELRKGELKGER"
+            android:layout_toRightOf="@+id/number"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="45dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp" />
 
 
-            <TextView
-                android:id="@+id/text"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="7dp"
-                android:text="Wrist Watches"
-                android:textColor="#000000"
-                android:textSize="15dp"
 
-                />
-
-            <TextView
-                android:id="@+id/color"
-                android:textSize="13dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="RED"
-                android:layout_marginTop="7dp"
-                android:textColor="#000000"
-                />
-        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
